# Breakout

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/breakout/: framebuffer.h  game.h  gameobject.h  gl_debug.h  glm.h  log.h  particles.h  renderer.h  resources.h  shader.h  sound.h  text.h  texture.h  utils.h  window.h
res/levels/: level00.txt  level01.txt  level03.txt
res/levels/huehue/: level03.txt
res/shaders/: basic_quad_shader.frag  basic_quad_shader.vert  postproc_shader.frag  postproc_shader.vert  tst.frag  tst.vert
src/: framebuffer.cpp  game.cpp  gl_debug.cpp  main.cpp  particles.cpp  renderer.cpp  resources.cpp  shader.cpp  sound.cpp  text.cpp  texture.cpp  utils.cpp  window.cpp
